tests/error/tracing_errors/higher_order@python313.err
Traceback (most recent call last):
  File "$FILE", line 14, in <module>
    module.compile()
    ~~~~~~~~~~~~~~^^
  File "$FILE", line 11, in test
    return f()
TypeError: Unsupported: Higher-order comptime functions are not supported
